@@ -12,14 +12,14 @@
 
   <groupId>org.camunda.bpm</groupId>
   <artifactId>camunda-parent</artifactId>
-  <version>7.1.0-SNAPSHOT</version>
+  <version>7.2.0-SNAPSHOT</version>
   <packaging>pom</packaging>
   <name>camunda BPM - Parent Pom</name>
 
   <description>
     This pom is the parent of all camunda BPM platform projects
   </description>
-  
+
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
@@ -34,7 +34,7 @@
     <!-- application servers -->
     <version.jboss.as>7.2.0.Final</version.jboss.as>
     <version.glassfish>3.1.2</version.glassfish>
-    <version.tomcat>7.0.35</version.tomcat>
+    <version.tomcat>7.0.50</version.tomcat>
 
     <version.arquillian>1.0.0.Final</version.arquillian>
     <version.arquillian.drone>1.0.0.Final</version.arquillian.drone>
@@ -53,7 +53,7 @@
     <version.mssql.oss>1.2.4</version.mssql.oss>
     <version.mssql>4.0</version.mssql>
     <version.db2.97>9.7</version.db2.97>
-    <version.postgre>9.1-901-1.jdbc4</version.postgre>
+    <version.postgre>9.3-1100-jdbc4</version.postgre>
 
     <!-- OSGi bundles properties -->
     <camunda.artifact />
@@ -73,7 +73,7 @@
     </camunda.osgi.import.pkg>
     <camunda.osgi.activator />
     <camunda.osgi.failok>false</camunda.osgi.failok>
-    <camunda.osgi.export>${camunda.osgi.export.pkg};${camunda.osgi.version};-noimport:=true</camunda.osgi.export>
+    <camunda.osgi.export>!org.camunda.bpm.model*, ${camunda.osgi.export.pkg};${camunda.osgi.version};-noimport:=true</camunda.osgi.export>
     <!--
     <camunda.osgi.export.pkg>!*.impl;${camunda.artifact}*</camunda.osgi.export.pkg>
     <camunda.osgi.private.pkg>${camunda.artifact}*.impl</camunda.osgi.private.pkg>
@@ -167,7 +167,7 @@
         <scope>test</scope>
       </dependency>
       <dependency>
-        <groupId>postgresql</groupId>
+        <groupId>org.postgresql</groupId>
         <artifactId>postgresql</artifactId>
         <version>${version.postgre}</version>
         <scope>test</scope>
@@ -241,7 +241,7 @@
         <groupId>org.apache.cxf</groupId>
         <artifactId>cxf-rt-bindings-soap</artifactId>
         <version>${cxf.version}</version>
-      </dependency> 
+      </dependency>
       <dependency>
         <groupId>org.apache.geronimo.specs</groupId>
         <artifactId>geronimo-jta_1.1_spec</artifactId>
@@ -260,8 +260,8 @@
       </dependency>
       <dependency>
         <groupId>org.codehaus.groovy</groupId>
-        <artifactId>groovy</artifactId>
-        <version>1.8.6</version>
+        <artifactId>groovy-all</artifactId>
+        <version>2.3.0</version>
       </dependency>
       <dependency>
         <groupId>org.json</groupId>
@@ -289,7 +289,7 @@
       <dependency>
         <groupId>org.mybatis</groupId>
         <artifactId>mybatis</artifactId>
-        <version>3.1.1</version>
+        <version>3.2.3</version>
       </dependency>
       <dependency>
         <groupId>org.mockito</groupId>
@@ -319,7 +319,7 @@
         <groupId>org.slf4j</groupId>
         <artifactId>slf4j-jdk14</artifactId>
         <version>1.6.1</version>
-      </dependency>    
+      </dependency>
       <dependency>
         <groupId>org.springframework</groupId>
         <artifactId>spring-beans</artifactId>
@@ -370,7 +370,7 @@
         <artifactId>subethasmtp-wiser</artifactId>
         <version>1.2</version>
         <scope>test</scope>
-      </dependency>     
+      </dependency>
       <dependency>
         <groupId>wsdl4j</groupId>
         <artifactId>wsdl4j</artifactId>
@@ -404,7 +404,7 @@
         <artifactId>java-uuid-generator</artifactId>
         <version>3.1.2</version>
       </dependency>
-       
+
       <dependency>
         <groupId>org.camunda.bpm.javaee</groupId>
         <artifactId>camunda-ejb-client</artifactId>
@@ -416,19 +416,19 @@
         <artifactId>camunda-engine</artifactId>
         <version>${project.version}</version>
       </dependency>
-      
+
       <dependency>
         <groupId>org.camunda.bpm</groupId>
         <artifactId>camunda-engine-spring</artifactId>
         <version>${project.version}</version>
       </dependency>
-      
+
       <dependency>
         <groupId>org.camunda.bpm</groupId>
         <artifactId>camunda-engine-cdi</artifactId>
         <version>${project.version}</version>
       </dependency>
-      
+
       <dependency>
         <groupId>org.camunda.bpm.identity</groupId>
         <artifactId>camunda-identity-ldap</artifactId>
@@ -448,13 +448,13 @@
         <version>${version.jboss-javaee-spec}</version>
         <type>pom</type>
       </dependency>
-      
+
       <dependency>
         <groupId>org.jboss.spec.javax.servlet</groupId>
         <artifactId>jboss-servlet-api_3.0_spec</artifactId>
-        <version>1.0.2.Final</version>       
+        <version>1.0.2.Final</version>
       </dependency>
-      
+
       <!-- licensing dependencies -->
       <dependency>
         <groupId>org.bouncycastle</groupId>
@@ -495,23 +495,53 @@
         <artifactId>tjws</artifactId>
         <version>${version.resteasy}</version>
       </dependency>
-      
+
       <dependency>
         <groupId>org.jboss.resteasy</groupId>
         <artifactId>resteasy-netty</artifactId>
         <version>2.3.6.Final</version>
       </dependency>
-      
+
       <dependency>
         <groupId>org.apache.directory.server</groupId>
         <artifactId>apacheds-all</artifactId>
         <version>1.5.5</version>
       </dependency>
 
+      <dependency>
+        <groupId>org.camunda.bpm.model</groupId>
+        <artifactId>camunda-bpmn-model</artifactId>
+        <version>${project.version}</version>
+      </dependency>
+
+      <dependency>
+        <groupId>org.camunda.bpm.model</groupId>
+        <artifactId>camunda-cmmn-model</artifactId>
+        <version>${project.version}</version>
+      </dependency>
+
+      <dependency>
+        <groupId>org.camunda.bpm.model</groupId>
+        <artifactId>camunda-xml-model</artifactId>
+        <version>${project.version}</version>
+      </dependency>
+
+      <dependency>
+        <groupId>org.python</groupId>
+        <artifactId>jython</artifactId>
+        <version>2.5.3</version>
+      </dependency>
+
+      <dependency>
+        <groupId>org.jruby</groupId>
+        <artifactId>jruby-complete</artifactId>
+        <version>1.7.12</version>
+      </dependency>
+
     </dependencies>
   </dependencyManagement>
-  
-   <build>   
+
+   <build>
     <pluginManagement>
       <plugins>
         <plugin>
@@ -523,12 +553,18 @@
             <target>${version.java}</target>
           </configuration>
         </plugin>
-        
+
         <!-- test plugins -->
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-surefire-plugin</artifactId>
           <version>2.16</version>
+          <configuration>
+            <systemPropertyVariables>
+              <myWorkingDir>${project.build.directory}</myWorkingDir>
+            </systemPropertyVariables>
+            <argLine>-XX:MaxPermSize=128m</argLine>
+          </configuration>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
@@ -543,7 +579,7 @@
               </execution>
             </executions>
         </plugin>
-        
+
         <!-- code plugins -->
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
@@ -560,12 +596,19 @@
           <artifactId>maven-resources-plugin</artifactId>
           <version>2.6</version>
         </plugin>
-        
+
         <!-- artifact plugins -->
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-jar-plugin</artifactId>
           <version>2.4</version>
+          <configuration>
+            <archive>
+              <manifest>
+                <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
+              </manifest>
+            </archive>
+          </configuration>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
@@ -573,22 +616,48 @@
           <version>2.3</version>
           <configuration>
             <ejbVersion>${version.ejb}</ejbVersion>
+            <archive>
+              <manifest>
+                <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
+              </manifest>
+            </archive>
           </configuration>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-rar-plugin</artifactId>
           <version>2.3</version>
+          <configuration>
+            <archive>
+              <manifest>
+                <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
+              </manifest>
+            </archive>
+          </configuration>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-war-plugin</artifactId>
           <version>2.4</version>
+          <configuration>
+            <archive>
+              <manifest>
+                <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
+              </manifest>
+            </archive>
+          </configuration>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-ear-plugin</artifactId>
           <version>2.9</version>
+          <configuration>
+            <archive>
+              <manifest>
+                <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
+              </manifest>
+            </archive>
+          </configuration>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
@@ -610,6 +679,13 @@
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-assembly-plugin</artifactId>
           <version>2.4</version>
+          <configuration>
+            <archive>
+              <manifest>
+                <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
+              </manifest>
+            </archive>
+          </configuration>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
@@ -633,7 +709,7 @@
              <Bundle-SymbolicName>${camunda.osgi.symbolic.name}</Bundle-SymbolicName>
              <Bundle-Activator>${camunda.osgi.activator}</Bundle-Activator>
              <Export-Package>${camunda.osgi.export}</Export-Package>
-             <Import-Package>org.camunda.bpm.engine.osgi*;resolution:=optional, ${camunda.osgi.import}</Import-Package>
+             <Import-Package>${camunda.osgi.import}</Import-Package>
              <DynamicImport-Package>${camunda.osgi.dynamic}</DynamicImport-Package>
              <Private-Package>${camunda.osgi.private.pkg}</Private-Package>
              <Implementation-Title>camunda</Implementation-Title>
@@ -651,7 +727,7 @@
            </versions>
           </configuration>
         </plugin>
-        <plugin>                    
+        <plugin>
           <groupId>org.codehaus.cargo</groupId>
           <artifactId>cargo-maven2-plugin</artifactId>
           <version>1.4.5</version>
@@ -673,7 +749,7 @@
         </plugin>
       </plugins>
     </pluginManagement>
-    
+
     <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
